# Fractalis

./: .gitignore  .travis.yml  README.md  README.rst  setup.cfg  setup.py
doc/api/: swagger.yaml
fractalis/: __init__.py  authorization.py  config.py  data_services_config.py  schema.py  session.py  validator.py
fractalis/analytics/: controller.py
fractalis/analytics/tasks/boxplot/: main.py
fractalis/analytics/tasks/correlation/: main.py
fractalis/analytics/tasks/heatmap/: main.py
fractalis/analytics/tasks/histogram/: main.py
fractalis/analytics/tasks/pca/: main.py
fractalis/analytics/tasks/shared/: utils.py
fractalis/analytics/tasks/survival/: main.py
fractalis/data/: controller.py  etl.py  etlhandler.py
fractalis/data/etls/ada/: handler_ada.py
fractalis/data/etls/demo_tcga_coad/: demo_handler.py
fractalis/data/etls/demo_wine_quality/: demo_handler.py
fractalis/data/etls/picsure/: picsure_handler.py
fractalis/data/etls/test/: etl_random_categorical.py  etl_random_numerical.py  etl_random_numerical_array.py  etl_randomdf.py  handler_test.py
fractalis/data/etls/transmart/: handler_transmart.py  shared.py
fractalis/state/: controller.py
tests/: __init__.py
tests/config/: logging.yaml  test_config.py
tests/functional/: test_analytics.py  test_data.py  test_state.py
tests/unit/analytics/boxplot/: test_boxplot.py
tests/unit/analytics/correlation/: test_correlation.py
tests/unit/analytics/histogram/: test_histogram.py
tests/unit/analytics/pca/: test_main.py
tests/unit/etls/: test_etlhandler.py
(+6 files in other folders)
