[metadata]
description-file=README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = fractalis

[tool:pytest]
addopts =
    --color=yes
    --verbose
    --capture=no
    --cache-clear
    --cov --cov-report xml --cov-report term --cov-report html
testpaths = tests
